--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ font-family:OCR A Extended;
 <nav>
 	<div class="logo">X developer</div>
 	<div class="navmanu">
-	<a href="new.html"id="home">Home</a>
+	<a href="index.html"id="home">Home</a>
 	<a href="skillpage.html"id="manu">Skills</a>
 	<a href="project.html"id="manu">Project</a>
 	<a href="#"id="manu">Contact</a>
