--- a/project.html
+++ b/project.html
@@ -86,7 +86,7 @@ color:#40E0D0;
 <nav>
 	<div class="logo">X developer</div>
 	<div class="navmanu">
-	<a href="new.html"id="manu">Home</a>
+	<a href="index.html"id="manu">Home</a>
 	<a href="skillpage.html"id="manu">Skills</a>
 	<a href="project.html"id="project">Project</a>
 	<a href="#"id="manu">Contact</a>
