--- a/skillpage.html
+++ b/skillpage.html
@@ -87,7 +87,7 @@ border-radius:40px;
 <nav>
 	<div class="logo">X developer</div>
 	<div class="navmanu">
-	<a href="new.html"id="manu">Home</a>
+	<a href="index.html"id="manu">Home</a>
 	<a href="skillpage.html"id="skills">Skills</a>
 	<a href="project.html"id="manu">Project</a>
 	<a href="#"id="manu">Contact</a>
